# Pica-Bo-BE

./: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  copilot-instructions.md  docker-compose.yml  pyproject.toml  seed_lookups.py
app/: celery_app.py  main.py
app/core/: config.py  db_init.py
app/lookups/: __init__.py  registry.py
app/migrations/: __init__.py  cli.py  registry.py  runner.py
app/models/: __init__.py  accessibility_need.py  activity.py  activity_lookup.py  base.py  booking.py  contact_channel_lookup.py  country_lookup.py  destination_lookup.py  dietary_preference_lookup.py  experience.py  experience_instance.py  experience_review.py  explorer.py  explorer_preference_type_lookup.py  explorer_review.py  language_lookup.py  loyalty_status_lookup.py  notification.py  operator.py  operator_payout_profile.py  payment.py  saved_payment_method.py  settlement.py  team.py  team_member.py  travel_style_lookup.py  user.py
app/repositories/: __init__.py  activity_repository.py  base.py  experience_instance_repository.py  experience_repository.py  explorer_repository.py  lookup_repository.py  operator_repository.py  team_member_repository.py  team_repository.py  user_repository.py
app/schemas/: __init__.py  activity.py  experience.py  experience_instance.py  explorer.py  operator.py  team.py  team_member.py  user.py
app/seeding/: __init__.py  activity_lookup_seed.py  base.py  contact_channel_lookup_seed.py  destination_seed.py  (+6 more)
scheduler/: __init__.py  apps.py  django_setup.py  manage.py  models.py  settings.py  urls.py
(+39 files in other folders)
