[tool.poetry]
name = "fastapi-beanie-jinja-starter"
version = "0.1.0"
description = "Starter project skeleton: FastAPI + Beanie + Jinja + JWT + Docker"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
jinja2 = "^3.1"
beanie = "^1.18"
pymongo = "^4.6"
python-dotenv = "^1.0"
pyjwt = "^2.8"
pydantic = "^1.10"
passlib = {extras = ["bcrypt"], version = "^1.8"}

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pylint = "^2.18"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
