[project]
name = "fastapi-beanie-jinja-starter"
version = "0.1.0"
description = "Starter project skeleton: FastAPI + Beanie + Jinja + JWT + Docker"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.100.0",
	"uvicorn>=0.22.0",
	"jinja2>=3.1",
	"beanie>=1.18",
	"motor>=3.0.0",
	"pymongo>=4.6",
	"python-dotenv>=1.0",
	"pyjwt>=2.8",
	"pydantic[email]>=1.10,<2.0",
	"passlib[bcrypt]>=1.7.4,<2.0",
	"redis[hiredis]>=5.0.0",
]

[dependency-groups]
dev = [
	"pytest>=7.4",
	"pylint>=2.18",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"
